--- a/CSS/about.css
+++ b/CSS/about.css
@@ -16,7 +16,7 @@
 .about-box{
     width: 100%;
     margin: 0px 40px 0 40px;
-    padding: 20px;
+    /* padding: 20px; */
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -26,29 +26,40 @@
 }
 
 .about{
-    width: 60%;
+    width: 50%;
+    margin-left: 50px;
 }
 
 .about .about-heading {
-    margin: 25px auto;
-    text-align: center;
+    margin: auto auto;
+    text-align: left;
     font-size: 35px;
     font-weight: 600;
+    margin-left: 50px
     
 }
 
+.about-button{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    margin-left: 50px;
+    margin-top: 25px;
+}
+
 .about .about-content{
-    padding: 10px;
-    font-size: 18px;
+    /* padding: 10px; */
+    font-size: 20px;
     font-weight: 500;
     text-align: left;
-    margin: 20px 0 0 40px;
+    margin: 30px 0 0 50px;
     line-height: 1.5em;
 }
 
 .about-box2{
     height: 70%;
-    width: 40%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -60,6 +71,12 @@
     height: 200px;
     
 }
+
+/* .about-image{
+    margin-top: 80px;
+    width: 100%;
+    margin-right: 80px;
+} */
 
 
 
@@ -74,39 +91,44 @@
     }
     .about-box{
         width: 100%;
-        margin: 70px 40px 0 40px;
+        margin: 70px 0px 0px 0px;
         padding: 20px;
         display: flex;
         justify-content: center;
         flex-direction: column;
         align-items: center;
         text-align: center;
+        
     
     }
     .about{
         width: 100%;
+        margin-left: 0;
     }
     
     .about .about-heading {
-        font-size: 25px;
-        margin: 25px auto;
-        padding: 10px;
+        font-size: 30px;
+        margin: 25px auto 0 auto;
+        /* padding: 10px; */
 
-        width: 50%;
+        width: 100%;
         text-align: center;
+        margin-left: 0px;
         
     }
 
     .about .about-content{
-        padding: 15px;
-        font-size: 14px;
-        text-align: justify;
+        padding: 19px;
+        font-size: 18px;
+        text-align: left;
         margin: 10px 10px;
         line-height: 1.5em;
+        margin-left: 0px;
     }
     .about-box2{
         height: 70%;
         width: 100%;
+        margin: 50px 0;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -118,6 +140,16 @@
         height: 140px;
         
     }
+
+    .about-button{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 0px;
+        margin-top: 20px;
+    }
+    
 }
 
 
