--- a/CSS/imagesections.css
+++ b/CSS/imagesections.css
@@ -157,8 +157,8 @@
     height: 100%;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.863);
-    /* background-image: url(../IMAGES/BACKGROUD//4877010.webp); */
-    opacity: .98;
+    background-image: url(../IMAGES/BACKGROUD//4877010.webp);
+    opacity: .93;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
