--- a/CSS/joinus.css
+++ b/CSS/joinus.css
@@ -34,7 +34,11 @@
     /* margin-top: 30px;
     margin-left: 50px; */
     /* font-size: 16px; */
-    margin: 30px auto;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin: 30px 50px;
 }
 
 .career-joinus-heading-box .career-joinus-heading .info-career-joinus-button button{
@@ -122,6 +126,10 @@
         margin-left: 50px; */
         /* font-size: 16px; */
         width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
         margin: 0px 0 20px 0;
     }
     
