--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -21,7 +21,7 @@
 }
 
 .footer{
-    font-size: 14px;
+    font-size: 12px;
     margin: 0 auto;
     padding: 10px;
 
@@ -88,7 +88,7 @@
    }
 
    .one ul li{
-    margin: 0px 5px;
+    margin: 0px 10px;
    }
 
    .two p, .three p{
@@ -124,6 +124,8 @@
     width: 100%;
     height: 225px;
     border-radius: 10px;
+    /* padding: 0 20px; */
+    /* margin-right: 40px; */
    }
 
    .footer .fa{
@@ -162,7 +164,7 @@
     }
 
     .one{
-        width: 70%;
+        width: 80%;
         font-size: 12px;
         line-height: 1.5em;
         padding: 0 0;
