--- a/CSS/app.css
+++ b/CSS/app.css
@@ -49,8 +49,170 @@ body{
          -moz-user-select: -moz-none;
           -ms-user-select: none;
               user-select: none;
-  
+
+   
   }
+
+
+
+  .car-box{
+    position: absolute;
+    left: 100px;
+    top: 10vh;
+    width: 20vw;
+    height: 60vh;
+    background-color: rgb(3, 77, 138);
+  }
+
+  .car-box .underline{
+    width: 40px;
+    height: 4px;
+    background-color: #fff;
+    position: absolute;
+    top: 30px;
+    left: 20px;
+  }
+
+  .car-box p{
+    font-size: 20px;
+    font-weight: 700;
+    color: #fff;
+    position: absolute;
+    top: 45px;
+    left: 20px;
+  }
+
+  .car-box .make-type{
+    font-size: 12px;
+    font-weight: 600;
+    color: #fff;
+    position: absolute;
+    top: 75px;
+    left: 20px;
+  }
+
+  
+  .car-box-two{
+    position: absolute;
+    right: 100px;
+    top: 10vh;
+    width: 20vw;
+    height: 60vh;
+    background-color: rgb(3, 77, 138);
+  }
+
+  .car-box-two .underline{
+    width: 40px;
+    height: 4px;
+    background-color: #fff;
+    position: absolute;
+    top: 30px;
+    right: 20px;
+  }
+
+  .car-box-two p{
+    font-size: 20px;
+    font-weight: 700;
+    color: #fff;
+    position: absolute;
+    top: 45px;
+    right: 20px;
+  }
+
+  .car-box-two .make-type{
+    font-size: 12px;
+    font-weight: 600;
+    color: #fff;
+    position: absolute;
+    top: 75px;
+    right: 20px;
+  }
+
+
+  @media screen and (max-width:450px){
+    .car-box{
+      position: absolute;
+      left: 25px;
+      top: 5vh;
+      width: 60vw;
+      height: 35vh;
+      background-color: rgb(3, 77, 138);
+    }
+  
+    .car-box .underline{
+      width: 40px;
+      height: 4px;
+      background-color: #fff;
+      position: absolute;
+      top: 30px;
+      left: 20px;
+    }
+  
+    .car-box p{
+      font-size: 20px;
+      font-weight: 700;
+      color: #fff;
+      position: absolute;
+      top: 45px;
+      left: 20px;
+    }
+
+
+    .car-box-two{
+      position: absolute;
+      right: 25px;
+      top: 5vh;
+      width: 60vw;
+      height: 35vh;
+      background-color: rgb(3, 77, 138);
+    }
+  
+    .car-box-two .underline{
+      width: 40px;
+      height: 4px;
+      background-color: #fff;
+      position: absolute;
+      top: 30px;
+      right: 20px;
+    }
+  
+    .car-box-two p{
+      font-size: 20px;
+      font-weight: 700;
+      color: #fff;
+      position: absolute;
+      top: 45px;
+      right: 20px;
+    }
+
+
+
+  }
+
+
+  /* body::-webkit-scrollbar-track
+  {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+  }
+  
+  body::-webkit-scrollbar
+  {
+    width: 10px;
+    background-color: #F5F5F5;
+  }
+  
+  body::-webkit-scrollbar-thumb
+  {
+    background-color: #000000;
+    border: 2px solid #555555;
+  }
+   */
+
+
+
+
+
 
 .container{
     max-width: 1920px;
@@ -65,6 +227,12 @@ form input{
   font-family: 'Montserrat', sans-serif; 
 }
 
+/* 
+.underline{
+  height: 3px;
+  width: 200px;
+  background-color: rgb(0, 47, 90);
+} */
 
 /* .secondaryButton{
   padding: 10px 25px;
@@ -86,25 +254,6 @@ form input{
   cursor: pointer;
 } */
 
-.aboutButton{
-  text-decoration: none;
-    padding: 15px 20px; 
-    border: none; 
-    border-radius: 5px; 
-    background-color: #1abc9c; 
-    /* color: #fff;  */
-    font-size: 18px; 
-    outline: none; 
-    cursor: pointer; 
-    color: #fff;
-
-    /* We need this to position 
-        span inside button */ 
-    position: relative; 
-    overflow: hidden; 
-    box-shadow: 6px 7px 40px -4px  
-             rgba(0, 0, 0, 0.2); 
-}
 
 
 /* #cars-VRF{
