--- a/careers/CSS/card.css
+++ b/careers/CSS/card.css
@@ -1,18 +1,42 @@
+.roles-heading{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 100%;
+    margin: 70px 0 40px 0;
+    padding-left: 15%;
+}
+
+.roles-heading h2{
+    /* position: absolute; */
+    font-size: 2.5em;
+    left: 15%;
+    padding-bottom: 20px;
+    
+}
+
+.roles-heading .roles-underline{
+    /* position: absolute; */
+    left: 15%;
+    height: 4px;
+    width: 150px;
+    background-color: rgb(0, 61, 110);
+}
 
 
 .dept-box{
-    /* display: none; */
     margin: 10px;
-    padding: 10vh 0;
-    flex-wrap: wrap;
+    /* padding: 5vh 0; */
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     text-align: center;
 
-    background-image: url(../../IMAGES/CAREERS/career_back.png);
-   /* background-image: url(../IMAGES/BACKGROUD/career.png);*/
+    /* background-image: url(../../IMAGES/CAREERS/career_back.png); */
+
     background-attachment: fixed;
 
     
@@ -20,218 +44,331 @@
 }
 
 .dept-card{
-    
-    margin: 10px 20px;
+    /* position: absolute; */
+    margin: 10px 50px;
     margin-top: 15px;
-    height: 300px;
-    width: 200px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    overflow: hidden;
-    background-color: rgb(255, 255, 255);
-    background-size: cover;
+    height: 200px;
+    width: 400px;
+    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
+    /* overflow: hidden; */
+    /* background-color: rgb(255, 255, 255); */
+    /* background-size: cover; */
     transition: .2s ease-in-out 0s;
     cursor: pointer;
+
 }
 
-.dept-card:hover{
-    
-    box-shadow: 0 16px 24px 0 rgba(0,0,0,0.2);
+.dept-box .card-side-one{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    height: 200px;
+    width: 400px;
     background-color: rgb(255, 255, 255);
 }
 
+.card-side-one .card-overlap{
+    position: absolute;
+    background-color: rgb(25, 144, 255);
+    height: 150px;
+    width: 150px;
+   left: -50px;
 
-   
+   display: flex;
+   align-items: center;
+   justify-content: center;
 
-.dept-card .card-side1{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 100%;
-    transition: 0.5s ease-in-out 0s;
-}
-.dept-card .card-side1 img{
-    height: 130px;
-    padding: 20px;
-    transition: .5s ease-in-out 0s;
-}
-.dept-card:hover .card-side1 img{
-    height: 100px;
-    padding: 10px;
+   border-radius: 10px;
+
 }
 
 
-.dept-card .card-side2{
-    padding: 10px 10px;
-    height: 0%;
-    text-align: center;
-    transition: 0.5s ease-in-out 0s;
-}
-
-.dept-card:hover .card-side2{
-    height: 60%;   
-}
-
-.dept-card:hover .card-side1{
-    height: 40%;
-}
-
-
-.dept-card .card-side2 p{
+.card-side-one .dept-name{
+    position: absolute;
+    top: 20px;
+    left: 120px;
+    font-size: 1em;
     font-weight: 600;
-    padding: 5px;
-    font-size: 14px;
-   
-  
+
+}
+
+.card-side-one .dept-name-underline{
+    position: absolute;
+    top: 45px;
+    left: 120px;
+    height: 4px;
+    width: 50px;
+    background-color: rgb(4, 90, 252);
+
+}
+
+.card-side-one .dept-about{
+    position: absolute;
+    /* top: 15%; */
+    left: 120px;
+    font-size: .8em;
+    font-weight: 600;
+    text-align: left;
+    padding-right: 15px;
 
 }
 
 
-.paragraph{
-    font-size: 12px;
+.card-side-one .card-overlap img{
+    height: 100px;
+    filter: brightness(0) invert(1) ;
+
+}
+
+.small{
+    height: 70px!important;
 }
 
 
-@media screen and (max-width:768px){
 
-    .careers-heading{
-        font-size: 25px;
-       
+
+@media screen and (max-width:450px){
+
+
+
+
+
+
+    .roles-heading{
+        margin: 70px 0 0px 0;
+        padding: 5%;
     }
 
-    .intro{
-        width: 80%;
-    }
-
-
-
-    .dept-card{
-    
-        margin: 10px 5px;
-        height: 300px;
-        width: 180px;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        overflow: hidden;
+    .roles-heading h2{
+        /* position: absolute; */
+        font-size: 2em;
+        /* left: 15%;
+        padding-bottom: 20px; */
         
     }
-
-    .dept-card:hover .card-side1 img{
-        height: 100px;
-
-    }
-    .dept-card:hover .card-side2{
-        height: 60%;   
-    }
     
-    .dept-card:hover .card-side1{
-        height: 40%;
-    }
 
-    .dept-card .card-side2 p{
-        font-size: 12px;
-        padding: 5px;
-      
-    
-    }
-    
-    
-    .paragraph{
-        font-size: 10px;
-    }
-}
-
-@media screen and (max-width:370px){
     .dept-card{
-    
-        margin: 10px 5px;
+        /* position: absolute; */
+        margin: 10px 0px;
+        margin-top: 15px;
         height: 200px;
+        width: 300px;
+        /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
+        /* overflow: hidden; */
+        /* background-color: rgb(255, 255, 255); */
+        /* background-size: cover; */
+        transition: .2s ease-in-out 0s;
+        cursor: pointer;
+    
+    }
+
+    .dept-box .card-side-one{
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        height: 200px;
+        width: 80%;
+        background-color: rgb(255, 255, 255);
+    }
+    
+    .card-side-one .card-overlap{
+        position: absolute;
+        background-color: rgb(25, 144, 255);
+        height: 150px;
         width: 150px;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        overflow: hidden;
-        
-    }
+       left: -50px;
     
-    .dept-card .card-side1 img{
-        height: 90px;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+    
+       border-radius: 10px;
+    
     }
 
-    .dept-card:hover .card-side1 img{
-        height: 60px;
-    
-
-    }
-
-    .dept-card:hover .card-side2{
-        height: 70%;   
-    }
-    
-    .dept-card:hover .card-side1{
-        height: 30%;
-    }
-
-    .dept-card .card-side2{
-        font-size: 13px;
-    }
-    .dept-card .card-side2 p{
-        padding: 0px;
-        font-size: 12px;
-       
-      
+    .card-side-one .dept-about{
+        position: absolute;
+        top: 70px;
+        left: 120px;
+        font-size: .8em;
+        font-weight: 600;
+        text-align: left;
+        padding-right: 15px;
     
     }
-    
-    
-    .paragraph{
-        font-size: 10px;
-    }
-    
-    
-    
 }
 
-@media screen and (max-width:340px){
+@media screen and (max-width:390px) {
     .dept-card{
+        /* position: absolute; */
+        margin: 10px 0px;
+        margin-top: 15px;
+        height: 200px;
+        width: 300px;
+        /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
+        /* overflow: hidden; */
+        /* background-color: rgb(255, 255, 255); */
+        /* background-size: cover; */
+        transition: .2s ease-in-out 0s;
+        cursor: pointer;
     
-        margin: 10px 5px;
-        height: 300px;
-        width: 200px;
+    }
+
+    .dept-box .card-side-one{
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        overflow: hidden;
-        
+        height: 200px;
+        width: 90%;
+        background-color: rgb(255, 255, 255);
+    }
+    
+    .card-side-one .card-overlap{
+        position: absolute;
+        background-color: rgb(25, 144, 255);
+        height: 120px;
+        width: 120px;
+       left: -20px;
+    
+       display: flex;
+       align-items: center;
+       justify-content: center;
+    
+       border-radius: 10px;
+    
     }
 
-    .dept-card:hover .card-side1 img{
-       
-        height: 110px;
+    .card-side-one .dept-name{
+        position: absolute;
+        top: 20px;
+        left: 120px;
+        font-size: 1em;
+        font-weight: 600;
+    
+    }
+    
+    .card-side-one .dept-name-underline{
+        position: absolute;
+        top: 45px;
+        left: 120px;
+        height: 4px;
+        width: 50px;
+        background-color: rgb(4, 90, 252);
+    
+    }
+    
+    .card-side-one .dept-about{
+        position: absolute;
+        /* top: 15%; */
+        left: 120px;
+        font-size: .8em;
+        font-weight: 600;
+        text-align: left;
+        padding-right: 15px;
+    
+    }
+    
+
+    .card-side-one .card-overlap img{
+        height: 80px;
+        filter: brightness(0) invert(1) ;
+    
     }
 
-    .dept-card:hover .card-side2{
-        height: 60%;   
-    }
-    
-    .dept-card:hover .card-side1{
-        
-        height: 40%;
-    }
-
-    .dept-card .card-side2{
-        font-size: 13px;
-    }
-     .dept-card .card-side2 p{
-        font-size: 14px;
-        padding: 10px;
-       
-      
-    
-    }
-    
-    
-    .paragraph{
-        font-size: 12px;
-        padding: 10px;
+    .small{
+        height: 60px!important;
     }
     
 }
 
+@media screen and (max-width:350px) {
+    .dept-card{
+        /* position: absolute; */
+        margin: 10px 0px;
+        margin-top: 15px;
+        height: 200px;
+        width: 300px;
+        /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
+        /* overflow: hidden; */
+        /* background-color: rgb(255, 255, 255); */
+        /* background-size: cover; */
+        transition: .2s ease-in-out 0s;
+        cursor: pointer;
+    
+    }
 
+    .dept-box .card-side-one{
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        height: 200px;
+        width: 95%;
+        background-color: rgb(255, 255, 255);
+    }
+    
+    .card-side-one .card-overlap{
+        position: absolute;
+        background-color: rgb(25, 144, 255);
+        height: 120px;
+        width: 120px;
+       left: -20px;
+    
+       display: flex;
+       align-items: center;
+       justify-content: center;
+    
+       border-radius: 10px;
+    
+    }
+
+    .card-side-one .dept-name{
+        position: absolute;
+        top: 20px;
+        left: 120px;
+        font-size: 1em;
+        font-weight: 600;
+    
+    }
+    
+    .card-side-one .dept-name-underline{
+        position: absolute;
+        top: 45px;
+        left: 120px;
+        height: 4px;
+        width: 50px;
+        background-color: rgb(4, 90, 252);
+    
+    }
+    
+    .card-side-one .dept-about{
+        position: absolute;
+        /* top: 15%; */
+        left: 120px;
+        font-size: .8em;
+        font-weight: 600;
+        text-align: left;
+        padding-right: 15px;
+    
+    }
+    
+
+    .card-side-one .card-overlap img{
+        height: 70px;
+        filter: brightness(0) invert(1) ;
+    
+    }
+
+    .small{
+        height: 50px!important;
+    }
+    
+}
