--- a/careers/CSS/app.css
+++ b/careers/CSS/app.css
@@ -55,7 +55,7 @@ body{
     justify-content: flex-start;
     text-align: center;
 
-    background-image: url(../../IMAGES/CAREERS/juliana-amorim-RBwfEmXqS3A-unsplash.jpg);
+    background-image: url(../../IMAGES/CAREERS/career-back.webp);
     /* background-position: top center; */
     background-repeat: no-repeat;
     background-size: cover;
