--- a/careers/CSS/app.css
+++ b/careers/CSS/app.css
@@ -18,7 +18,7 @@ body{
     transition: .3s ease 0s;
     /* overflow-x: hidden!important; */
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
 
 
       -webkit-user-select: none;
