--- a/careers/CSS/card.css
+++ b/careers/CSS/card.css
@@ -172,7 +172,7 @@
         justify-content: center;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         height: 200px;
-        width: 80%;
+        width: 340px;
         background-color: rgb(255, 255, 255);
     }
     
@@ -235,7 +235,7 @@
         justify-content: center;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         height: 200px;
-        width: 90%;
+        width: 320px;
         background-color: rgb(255, 255, 255);
     }
     
@@ -302,7 +302,7 @@
         /* position: absolute; */
         margin: 10px 0px;
         margin-top: 15px;
-        height: 200px;
+        height: 170px;
         width: 300px;
         /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
         /* overflow: hidden; */
@@ -319,8 +319,8 @@
         align-items: center;
         justify-content: center;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        height: 200px;
-        width: 95%;
+        height: 170px;
+        width: 300px;
         background-color: rgb(255, 255, 255);
     }
     
@@ -343,7 +343,7 @@
         position: absolute;
         top: 20px;
         left: 120px;
-        font-size: 1em;
+        font-size: .7em;
         font-weight: 600;
     
     }
@@ -362,7 +362,7 @@
         position: absolute;
         /* top: 15%; */
         left: 120px;
-        font-size: .8em;
+        font-size: .65em;
         font-weight: 600;
         text-align: left;
         padding-right: 15px;
