--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -5,7 +5,7 @@
     align-items: center;
     text-align: center;
     
-    height: 12vh;
+    height: 11vh;
     position: fixed;
     top: 0;
     
@@ -114,12 +114,12 @@
 
 
 .black-logo-VR{
-    height: 80px;
+    height: 70px;
     display: block;
     z-index: 11;
 }
 .white-logo-VR{
-    height: 80px;
+    height: 70px;
     display: none;
     z-index: 11;
 }
@@ -175,6 +175,8 @@
     list-style: none;
     margin: 0px 0px;
     padding: 10px 30px;
+
+   
 }
 
 .unset-values{
@@ -233,6 +235,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    /* font-size: 16px; */
+   
 }
 
 
@@ -240,6 +244,8 @@
     text-decoration: none;
     color: rgb(255, 255, 255);
     margin: auto 0;
+
+   
 }
 
 .burger{
