--- a/sponsor/brochure/app.css
+++ b/sponsor/brochure/app.css
@@ -35,7 +35,7 @@ body{
     height: 100vh;
 }
 
-.footer{
+/* .footer{
     margin: unset!important;
     height: unset!important;
     width: 100%!important;
@@ -45,5 +45,5 @@ body{
     margin: unset!important;
     height: 170px!important;
     width: unset!important;
-}
+} */
 
