--- a/crowdfunding/CSS/app.css
+++ b/crowdfunding/CSS/app.css
@@ -39,3 +39,39 @@ body{
     background: #000;
 }
 
+
+.secondary-dark-button{
+    border: 2px solid rgb(0, 67, 129)!important;
+    color: rgb(0, 67, 129)!important;
+    margin-right: 20px;
+    font-weight: 500!important;
+}
+
+.secondary-dark-button:hover{
+    color: #fff!important;
+    background-color: rgb(0, 67, 129)!important;
+}
+
+.secondaryButton{
+    padding: 10px 25px;
+    font-family: 'Montserrat', 'sans-seriff';
+    font-size: 16px;
+    border-radius: 30px;
+    outline: none;
+    color: #fff;
+    border: 2px solid rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0);
+    transition: .2s ease-in-out 0s;
+    font-weight: 500;
+}
+
+.secondaryButton:hover{
+    border: 2px solid rgb(255, 255, 255);
+    background-color: rgb(0, 67, 129);
+    color: #000;
+    cursor: pointer;
+    background-color: #fff;
+
+} 
+
+
