--- a/crowdfunding/CSS/home.css
+++ b/crowdfunding/CSS/home.css
@@ -1,35 +1,248 @@
 #home{
+    width: 100%;
+    /* font-family: 'Satisfy', cursive; */
     height: 100vh;
-    background-image: url(../Banner456.png);
+    /* padding-bottom: 30px; */
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    text-align: center;
+
+    background-image: url(../Web\ 1280\ –\ 1.png);
+    /* background-position: top center; */
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+    /* background-position-y: -50%!important; */
+}
 
-    font-family: 'Satisfy', cursive;
-    color: rgb(255, 0, 179);
+
+
+#home .cover-1{
+    width: 50%;
+    height: 100%;
 
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    text-align: left;
+
+    background-color: rgba(255, 255, 255, 0.636);
+    font-size: 3rem;
+}
+
+#home .cover-1 h2{
+    padding: 0 5%;
+    font-size: 1.6em;
+    width: 100%;
+    color: #000;
+    text-align: left;
+}
+
+#home .cover-1 h4{
+    padding: 0 5%;
+    font-size: 1em;
+    width: 100%;
+    color: #000;
+    text-align: left;
+}
+
+
+#home .home-underline{
+    /* position: absolute; */
+    margin-left: 5%;
+    margin-top: 20px;
+    height: 4px;
+    width: 100px;
+    background-color: rgb(3, 77, 138);
+}
+
+
+#home .cover-1 .second-sub-heading{
+    padding: 0 5%;
+    margin-top: 20px;
+    width: 100%;
+    text-align: left;
+    font-size: .5em;
+    color: #000;
+}
+
+#home .cover-1 .third-sub-heading{
+    position: absolute;
+    bottom: 20vh;
+    left: 2.5%;
+    margin-top: 20px;
+    text-align: left;
+    font-size: .35em;
+    color: #000;
+}
+
+.home-scroll-buttons{
+    position: absolute;
+    left: 2.5%;
+    bottom: 10vh;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
 
-#home h1{
-    font-size: 100px;
+#home .blue-box{
+    position: absolute;
+    right: 50px;
+    height: 60vh;
+    width: 50vh;
+    background-color: rgb(3, 77, 138);
 }
 
-#home p{
-    font-size: 40px;
+#home .blue-box .underline{
+    position: absolute;
+    right: 50px;
+    top: 50px;
+    height: 4px;
+    width: 100px;
+    background-color: #fff;
 }
 
-#home img{
-    height: 70px;
+#home .blue-box .underline-heading{
+    position: absolute;
+    right: 50px;
+    top: 70px;
+    color: #fff;
+    font-size: 1.2em;
+    font-weight: 600;
+
 }
+
+#home .blue-box .content{
+    position: relative;
+    padding: 25px;
+    top: 30%;
+    color: #fff;
+    font-size: 1.2em;
+    text-align: left;
+}
+
+#home .blue-box .content .first-capital{
+    font-size: 1.5em;
+}
+
+.crowdfunding-home-button{
+    position: absolute;
+    bottom: 5%;
+    left: 25px;
+}
+
+.secondaryButton{
+    padding: 10px 25px;
+    font-family: 'Montserrat', 'sans-seriff';
+    font-size: 16px;
+    border-radius: 30px;
+    outline: none;
+    color: #fff;
+    border: 2px solid rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0);
+    transition: .2s ease-in-out 0s;
+    font-weight: 500;
+}
+
+.secondaryButton:hover{
+    border: 2px solid rgb(255, 255, 255);
+    background-color: rgb(0, 67, 129);
+    color: #000;
+    cursor: pointer;
+    background-color: #fff;
+
+} 
 
 @media screen and (max-width:450px){
-    #home h1{
-        font-size: 60px;
+
+    
+#home .cover-1{
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-top: 50vh;
+    text-align: left;
+
+    background-color: rgba(255, 255, 255, 0.636);
+    font-size: 3rem;
+}
+
+#home .cover-1 h2{
+    padding: 0 5%;
+    font-size: .8em;
+    width: 100%;
+    color: #000;
+    text-align: left;
+}
+
+#home .cover-1 h4{
+    padding: 0 5%;
+    font-size: .6em;
+    width: 100%;
+    color: #000;
+    text-align: left;
+}
+
+
+#home .home-underline{
+    /* position: absolute; */
+    margin-left: 5%;
+    margin-top: 20px;
+    height: 4px;
+    width: 100px;
+    background-color: rgb(3, 77, 138);
+}
+
+
+#home .cover-1 .second-sub-heading{
+    padding: 0 5%;
+    margin-top: 20px;
+    width: 100%;
+    text-align: left;
+    font-size: .4em;
+    color: #000;
+}
+
+#home .cover-1 .third-sub-heading{
+    position: absolute;
+    bottom: 40vh;
+    left: 2.5%;
+    margin-top: 20px;
+    text-align: left;
+    font-size: .35em;
+    color: #000;
+}
+
+.home-scroll-buttons{
+    position: absolute;
+    left: 2.5%;
+    bottom: 30vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+   
+    #home .blue-box{
+        position: absolute;
+        top: 80vh;
+        right: 0px;
+        height: 50vh;
+        width: 45vh;
+        background-color: rgb(3, 77, 138);
     }
-    #home p{
-        font-size: 30px;
+    #home .blue-box .content{
+        position: relative;
+        padding: 25px;
+        top: 30%;
+        color: #fff;
+        font-size: 1em;
+        text-align: left;
     }
+    
 }
