--- a/crowdfunding/CSS/intro.css
+++ b/crowdfunding/CSS/intro.css
@@ -1,37 +1,54 @@
 #intro{
-    height: 100vh;
+    /* height: 100vh; */
 
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 100px 0;
 
 }
 
 #intro .intro-text{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
 
-    width: 50%;
-    height: 40%;
+    width: 60%;
+    padding-left: 5%;
+    /* height: 40%; */
 }
 
 #intro .chart{
-    width: 50%;
+    width: 40%;
     margin: 0 20px 0 0;
 }
 
 #intro .intro-text h1{
-    font-size: 35px;
-    font-family: 'Satisfy', cursive;
-    color: rgb(255, 0, 179);
+    font-size: 1.5em;
+    /* font-family: 'Satisfy', cursive; */
+    color: rgb(0, 0, 0);
+    width: 100%;
+    text-align: left;
+    /* padding-left: 2.5%; */
 }
 
 #intro .intro-text p{
-    font-size: 18px;
-    padding: 15px 25px;
+    font-size: 1.1em;
+    /* padding: 15px 30px; */
 }
+
+#intro .intro-text .underline{
+    margin: 20px 0;
+    height: 4px;
+    width: 100px;
+    background-color: rgb(3, 77, 138);
+}
+
+#intro .read-more-button{
+    margin-top: 20px;
+}
+
 
 #intro .chart{
     display: flex;
@@ -76,7 +93,7 @@
     #intro .intro-text{
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
     
         padding-top: 50px;
