--- a/crowdfunding/CSS/stats.css
+++ b/crowdfunding/CSS/stats.css
@@ -1,18 +1,68 @@
 #stats{
-    height: 30vh;
+    /* height: 40vh; */
 
-    background-color: rgb(235, 235, 235);
+    background-color: rgb(247, 247, 247);
+    padding: 60px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+#stats .blue-box{
+    position: absolute;
+    /* top: 0; */
+    /* left: 0; */
+    
+    height: 150px;
+    width: 150px;
+    background-color: rgb(3, 77, 138);
 
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+#stats .stats-heading{
+    /* position: absolute; */
+    padding-left: 5%;
+}
+
+#stats .blue-box h3{
+    /* position: absolute; */
+    position: absolute;
+    left: 25px;
+    top: 55px;
+    font-size: 1.4em;
+    color: rgb(255, 255, 255);
+}
+
+
+#stats .stats-heading .blue-box .underline{
+    position: absolute;
+    top: 40px;
+    left: 25px;
+    height: 4px;
+    width: 50px;
+    background-color: rgb(255, 255, 255);
+}
+
+
+
+/* #stats .stats-heading .underline{
+    margin-top: 20px;
+    height: 4px;
+    width: 100px;
+    background-color: rgb(3, 77, 138);
+} */
+
 #stats .container{
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    padding-top: 50px;
+    padding-left: 150px;
 }
 
 #stats .container .number, #stats .container .text{
@@ -39,7 +89,17 @@
 
 @media screen and (max-width:450px){
     #stats{
-        height: 80vh;
+        padding-top: 40vh;
+        height: unset;
+    }
+
+    .stats-pay-button{
+        margin-top: 20px;
+        margin-right: unset!important;
+    }
+
+    #stats .number{
+        margin-bottom: 40px;
     }
 
     #stats .container{
