--- a/crowdfunding/CSS/app.css
+++ b/crowdfunding/CSS/app.css
@@ -39,11 +39,13 @@ body{
     background: #000;
 }
 
+.crowdfunding-scroll-button{
+    margin-right: 20px;
+}
 
 .secondary-dark-button{
     border: 2px solid rgb(0, 67, 129)!important;
     color: rgb(0, 67, 129)!important;
-    margin-right: 20px;
     font-weight: 500!important;
 }
 
