--- a/crowdfunding/CSS/home.css
+++ b/crowdfunding/CSS/home.css
@@ -166,7 +166,6 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    margin-top: 50vh;
     text-align: left;
 
     background-color: rgba(255, 255, 255, 0.636);
@@ -174,6 +173,7 @@
 }
 
 #home .cover-1 h2{
+    margin-top: 30vh;
     padding: 0 5%;
     font-size: .8em;
     width: 100%;
@@ -233,7 +233,7 @@
         top: 80vh;
         right: 0px;
         height: 50vh;
-        width: 45vh;
+        width: 40vh;
         background-color: rgb(3, 77, 138);
     }
     #home .blue-box .content{
@@ -241,8 +241,61 @@
         padding: 25px;
         top: 30%;
         color: #fff;
-        font-size: 1em;
+        font-size: 1.3em;
+        line-height: 1.2em;
         text-align: left;
     }
+    
+}
+
+@media screen and (max-width:380px) {
+
+    #home .blue-box{
+        position: absolute;
+        top: 80vh;
+        right: 0px;
+        height: 50vh;
+        width: 40vh;
+        background-color: rgb(3, 77, 138);
+    
+    
+    }
+    
+    #home .blue-box .content{
+        position: relative;
+        padding: 25px;
+        top: 30%;
+        color: #fff;
+        font-size: 1em;
+        line-height: 1.4em;
+        text-align: left;
+    }
+    
+}
+
+@media screen and (max-width:350px) {
+
+    
+    #home .blue-box{
+        position: absolute;
+        top: 80vh;
+        right: 0px;
+        height: 55vh;
+        width: 45vh;
+        background-color: rgb(3, 77, 138);
+    
+    
+    }
+    
+    #home .blue-box .content{
+        position: relative;
+        padding: 25px;
+        top: 30%;
+        color: #fff;
+        font-size: 1em;
+        line-height: 1.4em;
+        text-align: left;
+    }
+
     
 }
