--- a/crowdfunding/CSS/slabs.css
+++ b/crowdfunding/CSS/slabs.css
@@ -84,6 +84,8 @@
 }
 
 .slab-container .slabs .text .amount{
+  position: absolute;
+  left: 100px;
   font-size: .8em;
   font-weight: 600;
   color: rgb(209, 209, 209);
@@ -91,7 +93,7 @@
 }
 
 .slab-container .slabs .slab-image{
-
+  padding-right: 10px;
 }
 
 .slab-container .slabs .slab-image img{
@@ -129,7 +131,7 @@ height: 15px;
 }
 
 .slab-properties{
-    background-color: rgb(230, 230, 230);
+    background-color: rgb(241, 241, 241);
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -143,7 +145,11 @@ height: 15px;
 }
 
 #propHeading{
-    width: 100%;
+  position: absolute;
+  top: 30px;
+  left: 50%;
+  padding-left: 40px;
+    /* width: 100%; */
     text-align: center;
     /* margin-top: 20px; */
     font-size: 1.3em;
@@ -151,20 +157,31 @@ height: 15px;
 }
 
 #propOne{
-    width: 100%;
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  padding-left: 40px;
+
     text-align: left;
     margin-top: 10px;
-    font-size: 1.2em;
+    font-size: 1em;
     color: rgb(0, 0, 0);
 }
 
 #goodies{
 
-    width: 100%;
+  position: absolute;
+  top: 90px;
+  padding-left: 150px;
+  left: 50%;
+
+    /* width: 100%; */
     text-align: left;
     margin-top: 10px;
-    font-size: 1em;
-    color: rgb(0, 0, 0);
+    line-height: 1.5em;
+    font-weight: 500;
+    font-size: .85em;
+    color: rgb(255, 0, 179);
 
 }
 
@@ -176,8 +193,13 @@ height: 15px;
 }
 
 #myImage{
-    height: 70px;
-    margin-top: 20px;
+ 
+  position: absolute;
+  top: 90px;
+  left: 50%;
+  padding-left: 40px;
+    height: 100px;
+    /* margin-top: 20px; */
 }
 
 
